infra/k8s/auth-db-depl.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: auth-db-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: auth-db
        image: mongo:4.0
        
---
apiVersion : v1
kind : Service
metadata:
  name : auth-db-srv
spec :
  selector :
    app : auth-db
  ports :
    - name: auth-db
      protocol : TCP
      port : 27017
      targetPort : 27017
