infra/k8s/orders-db-depl.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: orders-db-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
      - name: orders-db
        image: mongo:4.0
        
---
apiVersion : v1
kind : Service
metadata:
  name : orders-db-srv
spec :
  selector :
    app : orders-db
  ports :
    - name: orders-db
      protocol : TCP
      port : 27017
      targetPort : 27017
