infra/k8s/orders-depl.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
      - name: orders
        image: alifhossain/orders
        env : 
          - name: MONGO_URI
            value : "mongodb://orders-db-srv:27017/tickets" 
          - name: JWT_KEY
            valueFrom : 
              secretKeyRef :
                name : jwt-secret
                key : JWT_KEY
        
---
apiVersion : v1
kind : Service
metadata:
  name : orders-srv
spec :
  selector :
    app : orders
  ports :
    - name: orders
      protocol : TCP
      port : 4002
      targetPort : 4002
