infra/k8s/tickets-db-depl.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: tickets-db-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app: tickets-db
  template:
    metadata:
      labels:
        app: tickets-db
    spec:
      containers:
      - name: tickets-db
        image: mongo:4.0
        
---
apiVersion : v1
kind : Service
metadata:
  name : tickets-db-srv
spec :
  selector :
    app : tickets-db
  ports :
    - name: tickets-db
      protocol : TCP
      port : 27017
      targetPort : 27017
