infra/k8s/tickets-depl.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas : 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: alifhossain/tickets
        env : 
          - name: MONGO_URI
            value : "mongodb://tickets-db-srv:27017/tickets" 
          - name: JWT_KEY
            valueFrom : 
              secretKeyRef :
                name : jwt-secret
                key : JWT_KEY
        
---
apiVersion : v1
kind : Service
metadata:
  name : tickets-srv
spec :
  selector :
    app : tickets
  ports :
    - name: tickets
      protocol : TCP
      port : 4001
      targetPort : 4001
